#
# $Id: Makefile.am,v 1.5 2002/03/19 17:42:48 valignat Exp $
#

MAINTAINERCLEANFILES           = Makefile.in

EXTRA_DIST		       = admin_executor_service.cfg \
				 admin_executor_service.dsp

sbin_PROGRAMS                  = admin_executor_service

admin_executor_service_SOURCES = admin_executor_service.cpp

pkgsysconf_DATA		       = admin_executor_service.cfg

# End of Makefile.am

