#
# $Id: Makefile.am,v 1.6 2002/04/10 07:33:07 lecroart Exp $
#

MAINTAINERCLEANFILES           = Makefile.in

EXTRA_DIST		       = admin_executor_service.cfg \
				 admin_executor_service.dsp

sbin_PROGRAMS                  = admin_executor_service

admin_executor_service_SOURCES = admin_executor_service.cpp

# End of Makefile.am

