#
# $Id: Makefile.am,v 1.7 2002/06/12 10:21:25 lecroart Exp $
#

MAINTAINERCLEANFILES           = Makefile.in

EXTRA_DIST		       = admin_executor_service.cfg \
				 admin_executor_service.dsp \
				 common.cfg

sbin_PROGRAMS                  = admin_executor_service

admin_executor_service_SOURCES = admin_executor_service.cpp

# End of Makefile.am

