#
# $Id: Makefile.am,v 1.4 2002/03/19 17:42:48 valignat Exp $
#

MAINTAINERCLEANFILES  = Makefile.in

EXTRA_DIST		       = admin_service.cfg \
				 admin_service.dsp

sbin_PROGRAMS         = admin_service

admin_service_SOURCES = admin_service.cpp

pkgsysconf_DATA	      = admin_service.cfg

# End of Makefile.am

