#
# $Id: Makefile.am,v 1.6 2002/04/10 07:33:07 lecroart Exp $
#

MAINTAINERCLEANFILES  = Makefile.in

EXTRA_DIST		       = login_service.cfg \
				 login_service.dsp

sbin_PROGRAMS         = login_service

login_service_SOURCES = connection_client.cpp              \
                        connection_client.h                \
                        connection_ws.cpp                  \
                        connection_ws.h                    \
                        login_service.cpp                  \
                        login_service.h

# End of Makefile.am

