#
# $Id: Makefile.am,v 1.7 2002/06/12 10:21:45 lecroart Exp $
#

MAINTAINERCLEANFILES  = Makefile.in

EXTRA_DIST		       = login_service.cfg \
				 login_service.dsp \
				 common.cfg

sbin_PROGRAMS         = login_service

login_service_SOURCES = connection_client.cpp              \
                        connection_client.h                \
                        connection_ws.cpp                  \
                        connection_ws.h                    \
                        login_service.cpp                  \
                        login_service.h

# End of Makefile.am

