#
# $Id: Makefile.am,v 1.2 2001/07/27 15:51:10 valignat Exp $
#

MAINTAINERCLEANFILES   = Makefile.in

bin_PROGRAMS           = naming_service

naming_service_SOURCES = naming_service.cpp                \
                         naming_service.h

naming_service_LDADD   = -lnelnet -lnelmisc


# End of Makefile.am
