#
# $Id: Makefile.am,v 1.3 2002/03/19 17:42:49 valignat Exp $
#

MAINTAINERCLEANFILES   = Makefile.in

EXTRA_DIST		       = naming_service.cfg \
				 naming_service.dsp

sbin_PROGRAMS          = naming_service

naming_service_SOURCES = naming_service.cpp

pkgsysconf_DATA        = naming_service.cfg

# End of Makefile.am
