#
# $Id: Makefile.am,v 1.4 2002/03/19 17:42:49 valignat Exp $
#

MAINTAINERCLEANFILES    = Makefile.in

EXTRA_DIST		       = welcome_service.cfg \
				 welcome_service.dsp

sbin_PROGRAMS           = welcome_service

welcome_service_SOURCES = welcome_service.cpp

pkgsysconf_DATA	        = welcome_service.cfg

# End of Makefile.am
