#
# $Id: Makefile.am,v 1.6 2002/06/12 10:22:14 lecroart Exp $
#

MAINTAINERCLEANFILES    = Makefile.in

EXTRA_DIST		       = welcome_service.cfg \
				 welcome_service.dsp \
				 common.cfg

sbin_PROGRAMS           = welcome_service

welcome_service_SOURCES = welcome_service.cpp

# End of Makefile.am
