#
# $Id: Makefile.am,v 1.6.50.1 2006/02/24 11:30:35 distrib Exp $
#

MAINTAINERCLEANFILES    = Makefile.in

EXTRA_DIST		       = welcome_service.cfg \
				 welcome_service.dsp \
				 common.cfg

sbin_PROGRAMS           = welcome_service

welcome_service_SOURCES = welcome_service.cpp \
			  welcome_service_itf.cpp

# End of Makefile.am
