#
# $Id: Makefile.am,v 1.5 2002/11/15 17:23:02 lecroart Exp $
#

MAINTAINERCLEANFILES = Makefile.in

DIST_SUBDIRS      = net 3d pacs sound ai misc georges ligo memory

SUBDIRS              = ligo @NEL_SUBDIRS@

includedir           = ${prefix}/include/nel

include_HEADERS      = $(wildcard *.h)


# End of Makefile.am

