#
# $Id: Makefile.am,v 1.6 2004/01/15 17:30:56 lecroart Exp $
#

MAINTAINERCLEANFILES = Makefile.in

DIST_SUBDIRS      = net 3d pacs sound ai misc georges ligo memory

SUBDIRS              = @NEL_SUBDIRS@

includedir           = ${prefix}/include/nel

include_HEADERS      = $(wildcard *.h)


# End of Makefile.am

